Some working example(localy) of performance test execution